In May 22th 3rd commit

--- a/3. 하이닉스 기업 사이트 따라하기/index.html
+++ b/3. 하이닉스 기업 사이트 따라하기/index.html
@@ -3,8 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SK 하이닉스</title>
+	<!-- style -->
 	<link rel="stylesheet" href="assets/css/style.css"/>
 	<link rel="stylesheet" href="assets/css/reset.css"/>
+	<link rel="stylesheet" href="assets/css/font-awesome.css">
+	<!-- webfont -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700,900" rel="stylesheet">
 </head>
 <body>
 	<div class="wrap">
@@ -24,9 +28,24 @@
 					</div>
 					<div class="nav_icon">
 						<ul>
-							<li><a href=#">search</a></li>
-							<li><a href=#">careers</a></li>
-							<li><a href=#">language</a></li>
+							<li>
+								<a href=#">
+									<i class="fa fa-search" aria-hidden="true"></i>
+									<span>search</span>
+								</a>
+							</li>
+							<li>
+								<a href=#">
+									<i class="fa fa-user-plus" aria-hidden="true"></i>
+									<span>careers</span>
+								</a>
+							</li>
+							<li>
+								<a href=#">
+									<i class="fa fa-globe" aria-hidden="true"></i>
+									<span>language</span>
+								</a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -34,7 +53,9 @@
 		</div>
 		<!-- header -->
 		<div id="banner">
-			<div class="container"></div>
+			<div class="banner">
+					<img src="assets/img/main_slide01.jpg" alt="하이닉스">
+			</div>
 		</div>
 		<!-- banner -->
 		<div id="contents">
