--- a/3. 하이닉스 기업 사이트 따라하기/index.html
+++ b/3. 하이닉스 기업 사이트 따라하기/index.html
@@ -54,13 +54,93 @@
 		<!-- header -->
 		<div id="banner">
 			<div class="banner">
-					<img src="assets/img/main_slide01.jpg" alt="하이닉스">
+				<img src="assets/img/main_slide01.jpg" alt="하이닉스">
+			</div>
+			<div class="banner_icon">
+				<div class="container">
+					<ul>
+						<li>
+							<a href="#">
+							<i class="fa fa-laptop" aria-hidden="true"></i>
+							<span>보도자료</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+							<i class="fa fa-user-circle-o" aria-hidden="true"></i>
+							<span>인재체용</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+							<i class="fa fa-instagram" aria-hidden="true"></i>
+							<span>블러그</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+							<i class="fa fa-facebook" aria-hidden="true"></i>
+							<span>페이스북</span>
+							</a>
+						</li>
+						</ul>
+				</div>
 			</div>
 		</div>
 		<!-- banner -->
 		<div id="contents">
 			<div id="contents1">
-				<div class="container"></div>
+				<div class="container">
+					<div class="investor">
+						<h2>Inverstor Relations</h2>
+						<p>단기적인 경영성과에 집착하기 보다 장기적인 질적 성장을 우선 시 하는 내실경영에 최선을 다 하겠습니다.</p>
+						<div class="investor_box">
+							<div class="ileft">
+								<img src="assets/img/data.png" alt="데이터">
+							</div>
+							<div class="iright">
+								<ul>
+									<li>
+										<a href="#">
+										<i class="fa fa-pie-chart" aria-hidden="true"></i>
+										<span>재무제표</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+										<i class="fa fa-calendar-check-o" aria-hidden="true"></i>
+										<span>IR 일정</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+										<i class="fa fa-clock-o" aria-hidden="true"></i>
+										<span>주가알람</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+										<i class="fa fa-bar-chart" aria-hidden="true"></i>
+										<span>IR 자료요청</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+										<i class="fa fa-line-chart" aria-hidden="true"></i>
+										<span>실적발표</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+										<i class="fa fa-code-fork" aria-hidden="true"></i>
+										<span>기업지배구조</span>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 			<!-- contents1 -->
 			<div id="contents2">
